--- a/瀑布流/瀑布流/Base.lproj/Main.storyboard
+++ b/瀑布流/瀑布流/Base.lproj/Main.storyboard
@@ -13,20 +13,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4Ui-oy-Dwn">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="200" height="300"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bT4-qm-Iub">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ClothesCell" id="bT4-qm-Iub" customClass="ZYClothesCell">
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7hk-4h-HTz">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuN-de-IIl">
+                                            <rect key="frame" x="0.0" y="270" width="200" height="30"/>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="MzH-tc-Sh2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="iuN-de-IIl" firstAttribute="leading" secondItem="bT4-qm-Iub" secondAttribute="leading" id="GWq-1W-wED"/>
+                                    <constraint firstItem="7hk-4h-HTz" firstAttribute="top" secondItem="bT4-qm-Iub" secondAttribute="top" id="JxW-nf-srP"/>
+                                    <constraint firstAttribute="trailing" secondItem="iuN-de-IIl" secondAttribute="trailing" id="L3n-6C-f1l"/>
+                                    <constraint firstItem="7hk-4h-HTz" firstAttribute="leading" secondItem="bT4-qm-Iub" secondAttribute="leading" id="PXn-xP-CSN"/>
+                                    <constraint firstAttribute="bottom" secondItem="iuN-de-IIl" secondAttribute="bottom" id="ZIl-eT-lcf"/>
+                                    <constraint firstAttribute="trailing" secondItem="7hk-4h-HTz" secondAttribute="trailing" id="Zfv-yr-gER"/>
+                                    <constraint firstAttribute="bottom" secondItem="7hk-4h-HTz" secondAttribute="bottom" id="cWg-6P-Pys"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="clothesCellLabel" destination="iuN-de-IIl" id="8Ze-80-aSr"/>
+                                    <outlet property="imageViewClothesCell" destination="7hk-4h-HTz" id="c8F-Ed-pHy"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
